objects/BinderPage__c.object
<CustomObject>
    <description>Compliance Requirement 
Detail Record of a binder</description>
    <fields>
        <fullName>ArticleNumVersion__c</fullName>
        <label>ArticleNumVersion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Binder</label>
        <referenceTo>Binder__c</referenceTo>
        <relationshipLabel>BinderPages</relationshipLabel>
        <relationshipName>BinderPages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOPP__c</fullName>
        <label>FOPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Published_Date__c</fullName>
        <label>First Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <formula>Knowledge_Container_Name__r.containername__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Container_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Container Name</label>
        <referenceTo>KnowledgeContainer__c</referenceTo>
        <relationshipLabel>BinderPages</relationshipLabel>
        <relationshipName>BinderPages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageRef__c</fullName>
        <label>Page Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageType__c</fullName>
        <label>PageType</label>
        <picklist>
            <picklistValues>
                <fullName>KM Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publish_Status__c</fullName>
        <description>draft / online / archived</description>
        <label>Publish Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_on__c</fullName>
        <description>will be used for date filter criteria.
for archived article - this field maps to lastModifiedDate to match what the Version History GUI is showing.</description>
        <label>Published on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TitleSort__c</fullName>
        <label>TitleSort</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version #</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>articleDepotId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Articles Depot</label>
        <referenceTo>ArticlePDF__c</referenceTo>
        <relationshipLabel>BinderPages</relationshipLabel>
        <relationshipName>BinderPages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BinderPage</label>
    <nameField>
        <displayFormat>BPN-{00000000}</displayFormat>
        <label>BinderPage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BinderPages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>